# sunflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ContainerFile  LICENSE  README copy.md  README.md  config.yaml  pyproject.toml
.github/workflows/: container-image.yml  pre-commit.yml  test.yml
sunflow/: config.py  data_io.py  downloaders.py  forecast.py  geospatial.py  main.py  time_handler.py  validation.py
tests/: __init__.py  test_sunflow.py
