[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sunflow"
version = "0.1.0"
description = "Solar irradiance nowcasting framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Irene Livia Kruse", email = "ikr@dmi.dk" },
  { name = "Kristian Holten Møller", email = "khm@dmi.dk" },
  { name = "Kasper Hintz", email = "kah@dmi.dk" }
]
keywords = ["solar", "nowcasting", "irradiance", "meteorology", "renewable energy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/dmidk/sunflow"
Repository = "https://github.com/dmidk/sunflow"
Issues = "https://github.com/dmidk/sunflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sunflow*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
